1998-06-15  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* emacs.scm (emacs-load): New feature: Eval in specified module.

1998-06-14  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* readline.scm: Typo in regex module name.

1998-06-13  Mikael Djurfeldt  <mdj@barbara.nada.kth.se>

	* readline.scm (apropos-completion-function): regexp-quote text to
	be completed.

1998-06-11  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* debug.scm, emacs.scm: Bugfix: Treat `the-last-stack' as a fluid.

1998-06-09  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* boot-9.scm: Check that (current-input-port) is a tty before
	enabling readline.  (Thanks to Michael N. Livshin.)

1998-06-07  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* boot-9.scm (use-syntax): Turned into a macro inorder to be
	similar in use to `use-modules'.
	Example: (use-syntax (ice-9 syncase)) will 1. load the module
	(ice-9 syncase), and, 2. install the procedure `syncase' as eval
	transformer.
	(internal-use-syntax): New procedure.
	(process-define-module): Use `internal-use-syntax'.

1998-05-19  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* Makefile.am (ice9_sources): Add emacs.scm.

1998-05-13  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* readline.scm: Use the new readline facilities: Add the
	possibility to control input and output ports; Add apropos
	completion.

	* boot-9.scm: Antirevert Jim's readline code which he reverted
	19971027 and adapt it to the current readline interface.
	
	* boot-9.scm (top-repl): Only enable readline if not using the
	Emacs interface; Only use repl prompt when using the readline port
	from repl-read.  (We don't want to see it when calling `read'.)

	* boot-9.scm (remove-hook!): Parenthesis bug.

1998-05-11  Mikael Djurfeldt  <mdj@kenneth>

	* boot-9.scm: Load readline module if readline is present.

	* readline.scm (apropos-completion-function): New procedure:
	Symbolic completion.  (Thanks to Andrew Archibald!)

1998-04-22  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>
